@@ -163,6 +163,7 @@ compute_exponent_strategy(A52ThreadContext *tctx)
             for(blk=0; blk<A52_NUM_BLOCKS; blk++) {
                 blocks[blk].exp_strategy[ch] = str_predef[4][blk];
             }
+            frame->expstr_set[ch] = 4;
         }
     } else {
         for(ch=0; ch<ctx->n_channels; ch++) {
@@ -173,6 +174,7 @@ compute_exponent_strategy(A52ThreadContext *tctx)
             for(blk=0; blk<A52_NUM_BLOCKS; blk++) {
                 blocks[blk].exp_strategy[ch] = str_predef[str][blk];
             }
+            frame->expstr_set[ch] = str;
         }
     }
 
